// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddU2FModal SharedSecret step display 1`] = `
<form class="wrapper">
  <div class="content ">
    <div class="name">
      <label class="nameLabel" htmlFor="name">Name</label>
      <div class="nameInputContainer">
        <input value type="name" id="inputName" required placeholder="Name" class="nameTextInput"
        />
      </div>
    </div>
  </div>
  <div class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </div>
</form>
`;

exports[`AddU2FModal SharedSecret step display 2`] = `
<form class="wrapper">
  <div class="content ">
    <div class="name">
      <label class="nameLabel" htmlFor="name">Name</label>
      <div class="nameInputContainer">
        <input value="Test for key" type="name" id="inputName" required placeholder="Name"
        class="nameTextInput" />
      </div>
    </div>
  </div>
  <div class="footer">
    <button type="reset" value="Reset">Back</button>
    <button type="submit" value="Submit">Next</button>
  </div>
</form>
`;
